my-cluster-backup/default/ingress-aks-helloworld-nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1beta1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"nginx"},"name":"aks-helloworld-nginx-ingress","namespace":"default"},"spec":{"rules":[{"http":{"paths":[{"backend":{"serviceName":"poi","servicePort":80},"path":"/api/poi"},{"backend":{"serviceName":"trips","servicePort":80},"path":"/api/trips"},{"backend":{"serviceName":"userprofile","servicePort":80},"path":"/api/user"},{"backend":{"serviceName":"user-java","servicePort":8 [...]
    kubernetes.io/ingress.class: nginx
  creationTimestamp: "2021-03-10T07:48:01Z"
  managedFields:
  - apiVersion: networking.k8s.io/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
          f:kubernetes.io/ingress.class: {}
      f:spec:
        f:rules: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: "2021-03-10T07:48:01Z"
  - apiVersion: networking.k8s.io/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:loadBalancer:
          f:ingress: {}
    manager: nginx-ingress-controller
    operation: Update
    time: "2021-03-10T07:48:35Z"
  name: aks-helloworld-nginx-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: poi
          servicePort: 80
        path: /api/poi
        pathType: ImplementationSpecific
      - backend:
          serviceName: trips
          servicePort: 80
        path: /api/trips
        pathType: ImplementationSpecific
      - backend:
          serviceName: userprofile
          servicePort: 80
        path: /api/user
        pathType: ImplementationSpecific
      - backend:
          serviceName: user-java
          servicePort: 80
        path: /api/user-java
        pathType: ImplementationSpecific
      - backend:
          serviceName: tripviewer
          servicePort: 80
        path: /
        pathType: ImplementationSpecific
